Tried x0vncserver (tiger-vnc) instead of x11vnc, but reverted to x11vnc.

--- a/rootfs/etc/supervisor/conf.d/supervisord.conf
+++ b/rootfs/etc/supervisor/conf.d/supervisord.conf
@@ -20,6 +20,7 @@ stderr_logfile_maxbytes=0
 
 [group:x]
 programs=xvfb,wm,lxpanel,pcmanfm,x11vnc,novnc
+# programs=xvfb,wm,lxpanel,pcmanfm,x0vncserver,novnc
 
 [program:wm]
 priority=15
@@ -54,6 +55,10 @@ stopsignal=KILL
 [program:x11vnc]
 priority=20
 command=x11vnc -display :1 -xkb -forever -shared -repeat -capslock
+
+# [program:x0vncserver]
+# priority=20
+# command=x0vncserver -display :1 -rfbauth /.passwordvnc
 
 [program:novnc]
 priority=25
