--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,33 +1,29 @@
 name: ci
 
-on:
+on:  # yamllint disable-line rule:truthy
   push:
     branches:
-      - 'master'
+      - main
+  pull_request:
+  schedule:
+    - cron: "37 13 */4 * *"
+  workflow_dispatch:
 
 jobs:
-  docker:
+  validation:
     runs-on: ubuntu-latest
+    name: Validate a Pull Request
     steps:
-      
-      - name: Checkout
-        uses: actions/checkout@v3
-      
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      
-      - name: Login to DockerHub
+      - uses: actions/checkout@v3.3.0
+        
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: phantomic
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
-      - name: Build and push
+
+      - name: build
         uses: docker/build-push-action@v3
         with:
-          context: .
-          push: true
           tags: phantomic/docker-ubuntu-novnc:latest
+          push: true
